# glchk

./: .gitignore  README.md  meson.build
src/: glchk.c  glchk.h  gldl.c  gldl.h  meson.build
test/: getString.c  meson.build
